--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
     "multer": "^2.0.2",
-    "npm": "^11.6.2"
+    "npm": "^11.6.2",
+    "thokmarket---copy": "file:.."
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
