--- a/thokMarket/package.json
+++ b/thokMarket/package.json
@@ -19,7 +19,8 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "thokmarket---copy": "file:.."
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
